--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -64,6 +65,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="yTU-6T-U7e" id="dtJ-ow-rdv"/>
                                     <outlet property="userImageView" destination="guF-uk-WZv" id="RMo-Ae-UZc"/>
+                                    <segue destination="qdY-Bc-iJU" kind="show" identifier="ShowUserSegue" id="JTU-hG-5ab"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -77,6 +79,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="enN-Ke-b1S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1084" y="151.57421289355324"/>
+        </scene>
+        <!--User Detail View Controller-->
+        <scene sceneID="NWW-59-aiA">
+            <objects>
+                <viewController id="qdY-Bc-iJU" customClass="UserDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eww-gh-leL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="GAf-ZQ-K6a"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ccz-Sf-TDx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2105" y="146"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Jwh-ey-qVe">
