--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -87,13 +87,48 @@
                     <view key="view" contentMode="scaleToFill" id="eww-gh-leL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="A5Q-II-YhS">
+                                <rect key="frame" x="16" y="80" width="343" height="507"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HQc-Mf-SGT">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="402"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IAD-a7-SSE">
+                                        <rect key="frame" x="0.0" y="410" width="343" height="38"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T1K-Iw-Dyz">
+                                        <rect key="frame" x="0.0" y="456" width="343" height="21.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JbF-bE-50N">
+                                        <rect key="frame" x="0.0" y="485.5" width="343" height="21.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="GAf-ZQ-K6a" firstAttribute="trailing" secondItem="A5Q-II-YhS" secondAttribute="trailing" constant="16" id="4Xo-Sz-KW5"/>
+                            <constraint firstItem="A5Q-II-YhS" firstAttribute="top" secondItem="GAf-ZQ-K6a" secondAttribute="top" constant="16" id="Vl8-dj-7ET"/>
+                            <constraint firstItem="A5Q-II-YhS" firstAttribute="centerX" secondItem="eww-gh-leL" secondAttribute="centerX" id="gv9-0P-xlV"/>
+                            <constraint firstItem="A5Q-II-YhS" firstAttribute="leading" secondItem="GAf-ZQ-K6a" secondAttribute="leading" constant="16" id="sSb-Zz-NZd"/>
+                            <constraint firstItem="A5Q-II-YhS" firstAttribute="centerY" secondItem="eww-gh-leL" secondAttribute="centerY" id="y5G-EH-4jW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="GAf-ZQ-K6a"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ccz-Sf-TDx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2105" y="146"/>
+            <point key="canvasLocation" x="2104.8000000000002" y="145.27736131934034"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Jwh-ey-qVe">
